Fix text wrapping for IE 11
IE 11 doesn't support overflow-wrap. Also need to set max-width to
prevent extra white space from appearing in wrapped cells.

--- a/srcjs/assets/reactable.css
+++ b/srcjs/assets/reactable.css
@@ -17,6 +17,9 @@
   /* Override default nowrap */
   white-space: inherit;
   overflow-wrap: break-word;
+  /* For IE 11 */
+  max-width: 100%;
+  word-wrap: break-word;
 }
 
 .ReactTable .rt-thead .rt-th,
